# leptos-csr-netlify

./: .env  Cargo.toml  input.css  package-lock.json
.github/workflows/: netlify_deploy.yml
src/: lib.rs
src/components/: mod.rs
src/dashboard/: page.rs
src/pages/: home.rs  login.rs  mod.rs  side_nav_menu.rs  sidebar.rs
src/utilities/: cookies.rs  mod.rs
style/: output.css
