[package]
name = "leptos-csr-netlify"
version = "0.1.0"
edition = "2021"
authors = ["kodecraft-herald <herald@kodecraft.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
leptos-use = "0.10.9"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
magic-crypt = "3.1.13"
chrono = "0.4.38"
reqwest = { version = "0.12.4", features = ["json"] }
web-sys = "0.3.69"
serde_urlencoded = "0.7.1"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
